--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node build/src/server.js"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "express": "^4.18.2",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^5.1.1"
