--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "swagger-ui-express": "^5.0.0",
+    "ts-dotenv": "^0.9.1",
     "tsoa": "^5.1.1"
   },
   "devDependencies": {
