--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "express": "^4.18.2",
+    "mongodb": "^6.2.0",
     "swagger-ui-express": "^5.0.0",
     "ts-dotenv": "^0.9.1",
     "tsoa": "^5.1.1"
