--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,15 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "node-terminal",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch Dev",
       "skipFiles": [
         "<node_internals>/**"
       ],
       "preLaunchTask": "npm: build",
-      "program": "${workspaceFolder}/build/src/server.js",
+      "command": "npm run dev",
       "outFiles": ["${workspaceFolder}/build/**/*.js"],
       "sourceMaps": true,
     }
