--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "request": "^2.88.2",
     "swagger-ui-express": "^5.0.0",
     "ts-dotenv": "^0.9.1",
-    "tsoa": "^5.1.1"
+    "tsoa": "^5.1.1",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
