--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.2.0",
     "request": "^2.88.2",
     "swagger-ui-express": "^5.0.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.19",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.6",
     "@types/request": "^2.48.12",
     "@types/swagger-ui-express": "^4.1.5",
