--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.8.6",
     "@types/request": "^2.48.12",
     "@types/swagger-ui-express": "^4.1.5",
