--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "build": "tsoa spec-and-routes && tsc",
     "start": "node build/src/server.js",
-    "codegen": "rm -rf src/generated/kroger-cli; openapi -i ./docs/kroger/swagger.json -o src/generated/kroger-cli -c axios"
+    "codegen": "rm -rf src/generated/kroger-cli; openapi -i ./docs/kroger/swagger.json -o src/generated/kroger-cli -c axios",
+    "test": "mocha -r ts-node/register 'src/tests/typescript/*'"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -27,17 +28,23 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/chai": "^4.3.16",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mocha": "^10.0.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.8.6",
     "@types/request": "^2.48.12",
+    "@types/sinon": "^17.0.3",
     "@types/swagger-ui-express": "^4.1.5",
+    "chai": "^4.4.1",
     "concurrently": "^8.2.1",
+    "mocha": "^10.4.0",
     "nodemon": "^3.0.1",
     "openapi-typescript-codegen": "^0.25.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "sinon": "^17.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
