--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.2.0",
+    "reflect-metadata": "^0.2.2",
     "request": "^2.88.2",
     "swagger-ui-express": "^5.0.0",
     "ts-dotenv": "^0.9.1",
