--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/request": "^2.48.12",
     "@types/sinon": "^17.0.3",
     "@types/swagger-ui-express": "^4.1.5",
+    "axios-mock-adapter": "^2.0.0",
     "chai": "^4.4.1",
     "concurrently": "^8.2.1",
     "mocha": "^10.4.0",
